<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="200dp"
            android:id="@+id/edtLogin"
            android:layout_height="wrap_content"
            android:hint="@string/id" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
             />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextActivity"
        android:text="@string/login"
        />
    <Button
        android:onClick="nextJoinPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        />

    </LinearLayout>


</LinearLayout>