<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/detailView"
            android:layout_width="150dp"
            android:layout_height="200dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20dp" />
            <TextView
                android:text="@string/year"
                android:id="@+id/detailYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:paddingTop="135dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/rateSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/result_country"
                    />
                <TextView
                    android:id="@+id/resultRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View

        android:layout_width="wrap_content"

        android:layout_height="0.3dp"

        android:background="@color/indigo" />
    <TextView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/mypage"/>
    <View

        android:layout_width="wrap_content"

        android:layout_height="0.3dp"

        android:background="@color/indigo" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editInsert"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            />
        <Button
            android:onClick="insertComent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnInsert"
            android:text="@string/insert"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/viewComent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>